--- a/templates/nginx-configmap.yaml
+++ b/templates/nginx-configmap.yaml
@@ -15,7 +15,6 @@ data:
         # Security headers
         add_header X-Frame-Options "SAMEORIGIN" always;
         add_header X-Content-Type-Options "nosniff" always;
-        add_header X-XSS-Protection "1; mode=block" always;
 
         # Increase client max body size for file uploads
         client_max_body_size 100M;
@@ -27,21 +26,20 @@ data:
             add_header Content-Type text/plain;
         }
 
+        location = /favicon.ico { access_log off; log_not_found off; }
+        location = /robots.txt  { access_log off; log_not_found off; }
+
         # Main location block
         location / {
             try_files $uri $uri/ /index.php?$query_string;
         }
 
         # PHP-FPM configuration
-        location ~ \.php$ {
-            try_files $uri =404;
-            fastcgi_split_path_info ^(.+\.php)(/.+)$;
+        location ~ ^/index\.php(/|$) {
             fastcgi_pass 127.0.0.1:9000;
-            fastcgi_index index.php;
+            fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
             include fastcgi_params;
-            fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-            fastcgi_param PATH_INFO $fastcgi_path_info;
-            fastcgi_param HTTP_PROXY "";
+            fastcgi_hide_header X-Powered-By;
             fastcgi_intercept_errors off;
             fastcgi_buffer_size 16k;
             fastcgi_buffers 4 16k;
@@ -51,7 +49,7 @@ data:
         }
 
         # Deny access to hidden files
-        location ~ /\. {
+        location ~ /\.(?!well-known).* {
             deny all;
         }
 
