--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -31,9 +31,23 @@ spec:
                 echo "ERROR: /var/www/html/public directory not found!"
                 exit 1
               fi
+
+              echo "Setting up storage directory structure..."
+              mkdir -p /storage-shared/app/public
+              mkdir -p /storage-shared/framework/cache/data
+              mkdir -p /storage-shared/framework/sessions
+              mkdir -p /storage-shared/framework/testing
+              mkdir -p /storage-shared/framework/views
+              mkdir -p /storage-shared/logs
+              chown -R www-data:www-data /storage-shared
+              chmod -R 775 /storage-shared
+              echo "Storage directory structure created"
+
           volumeMounts:
             - name: bagisto-public
               mountPath: /public-shared
+            - name: bagisto-storage
+              mountPath: /storage-shared
       containers:
         - name: bagisto
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
@@ -173,10 +187,6 @@ spec:
           volumeMounts:
             - name: bagisto-storage
               mountPath: /var/www/html/storage
-            - name: bagisto-vendor
-              mountPath: /var/www/html/vendor
-            - name: bagisto-bootstrap-cache
-              mountPath: /var/www/html/bootstrap/cache
             - name: bagisto-public
               mountPath: /var/www/html/public
 
@@ -212,7 +222,3 @@ spec:
         - name: bagisto-storage
           persistentVolumeClaim:
             claimName: bagisto-storage
-        - name: bagisto-vendor
-          emptyDir: {}
-        - name: bagisto-bootstrap-cache
-          emptyDir: {}
