--- a/Chart.yaml
+++ b/Chart.yaml
@@ -1,7 +1,7 @@
 apiVersion: v2
 name: bagisto
 version: 0.1.0
-description: A Helm chart for deploying Bagisto on Kubernetes
+description: A Helm chart for deploying [Bagisto](https://github.com/bagisto/bagisto) on Kubernetes
 appVersion: "1.0.0"
 dependencies:
 - name: mysql
