--- a/templates/migration-job.yaml
+++ b/templates/migration-job.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: {{ include "bagisto.name" . }}
   annotations:
-    "helm.sh/hook": pre-install,pre-upgrade
+    "helm.sh/hook": post-install,post-upgrade
     "helm.sh/hook-weight": "1"
     "helm.sh/hook-delete-policy": before-hook-creation,hook-succeeded
 spec:
