--- a/values.yaml
+++ b/values.yaml
@@ -30,14 +30,32 @@ storage:
   # -- Storage class name (leave empty for default)
   storageClass: ""
 
+# -- Resource requests and limits for the Bagisto (PHP-FPM) container
+resources:
+  requests:
+    memory: "256Mi"
+    cpu: "250m"
+  limits:
+    memory: "512Mi"
+    cpu: "1000m"
+
+# -- Resource requests and limits for the Nginx sidecar container
+nginxResources:
+  requests:
+    memory: "64Mi"
+    cpu: "50m"
+  limits:
+    memory: "128Mi"
+    cpu: "250m"
+
 # -- Bagisto application configuration
 app:
   # -- Application name
   name: "Bagisto"
   # -- Application environment (local, production)
   env: "production"
-  # -- Enable debug mode
-  debug: true
+  # -- Enable debug mode (should be false in production)
+  debug: false
   # -- Laravel APP_KEY (base64-encoded 32-byte random string). Generate with: echo "base64:$(openssl rand -base64 32)"
   key: "base64:CHANGE_THIS_KEY_RUN_php_artisan_key_generate"
   # -- Application URL
@@ -143,6 +161,8 @@ mysqlStandalone:
     repository: docker.io/mysql
     # -- MySQL image tag
     tag: "9.6.0-oraclelinux9"
+    # -- Image pull policy
+    pullPolicy: IfNotPresent
   # -- MySQL command line arguments (e.g., for charset configuration)
   args:
     - --character-set-server=utf8mb4
